# fastwebsockets

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md  URING.md  build.rs  compare_results.sh  frame.rs  lib.rs  main.rs  mask.rs  pr_description.md  profile.json  run_benchmark.sh  rust-toolchain  server.deno.js  test.js
.cargo/: config.toml
.github/workflows/: rust.yml
autobahn/: Makefile  fuzzingclient.json  fuzzingserver.json  server-test.js
benches/: Makefile  README.md  echo_server_benchmark.rs  load_test.c  memcpu.js  run.js  unmask.rs  uring_comparison.rs
docs/servers/: index.html  index.json  sockdeez_case_10_1_1.html  sockdeez_case_10_1_1.json  sockdeez_case_1_1_1.html  sockdeez_case_1_1_1.json  sockdeez_case_1_1_2.html  sockdeez_case_1_1_2.json  sockdeez_case_1_1_3.html  sockdeez_case_1_1_3.json  sockdeez_case_1_1_4.html  sockdeez_case_1_1_4.json  sockdeez_case_1_1_5.html  sockdeez_case_1_1_5.json  sockdeez_case_1_1_6.html  sockdeez_case_1_1_6.json  sockdeez_case_1_1_7.html  sockdeez_case_1_1_7.json  sockdeez_case_1_1_8.html  sockdeez_case_1_1_8.json  sockdeez_case_1_2_1.html  sockdeez_case_1_2_1.json  sockdeez_case_1_2_2.html  sockdeez_case_1_2_2.json  sockdeez_case_1_2_3.html  sockdeez_case_1_2_3.json  sockdeez_case_1_2_4.html  sockdeez_case_1_2_4.json  sockdeez_case_1_2_5.html  sockdeez_case_1_2_5.json  sockdeez_case_1_2_6.html  sockdeez_case_1_2_6.json  sockdeez_case_1_2_7.html  sockdeez_case_1_2_7.json  sockdeez_case_1_2_8.html  sockdeez_case_1_2_8.json  sockdeez_case_2_1.html  sockdeez_case_2_1.json  sockdeez_case_2_10.html  sockdeez_case_2_10.json  (+1166 more)
examples/: .echo_server.rs.swp  autobahn_client.rs  axum.rs  bench_comparison.rs  cert.pem  connection_analysis.rs  deno.js  deno.rs  echo_client.rs  echo_server.rs  echo_server_split.rs  echo_server_uring.rs  final_benchmark.rs  key.pem  load_test.rs  localhost.crt  localhost.key  minimal_uring.rs  monoio_client.rs  monoio_server.rs  monoio_tlsclient.rs  native_uring_test.rs  performance_test.rs  simple_bench.rs  simple_uring_test.rs  steady_state_bench.rs  test_adapter.rs  tls_client.rs  tls_client_binance.rs  tls_server.rs  websocket_bench.rs  working_demo.rs  working_uring_bench.rs
fuzz/: .rustfmt.toml  Cargo.toml
fuzz/fuzz_targets/: parse_frame.rs  parse_frame_fragment.rs  unmask.rs
src/: close.rs  error.rs  fragment.rs  frame.rs  futures.rs  handshake.rs  lib.rs  m_arm64_neon.S  mask.rs  recv.rs  upgrade.rs  uring.rs
src/rt/: hyper_compat.rs  io.rs  mod.rs  read_buf.rs
tests/: concurrency.rs  double_close.rs  fragment_utf8.rs  handshake.rs  split.rs  ui.rs  upgrade.rs
tests/ui/: 01-send-executor.rs  02-!send-executor.rs
