[package]
name = "fastwebsockets"
description = "A fast RFC6455 WebSocket server implementation"
version = "0.4.2"
authors = ["Divy Srivastava <dj.srivastava23@gmail.com>"]
license = "Apache-2.0"
edition = "2021"
repository = "https://github.com/denoland/fastwebsockets"

[[example]]
name = "echo_server"
path = "examples/echo_server.rs"
required-features = ["upgrade"]

[[example]]
name = "autobahn_client"
path = "examples/autobahn_client.rs"
required-features = ["upgrade"]

[dependencies]
tokio = { version = "1.25.0",  default-features = false, features = ["io-util"] }
simdutf8 = { version = "0.1.4", optional = true }
hyper = { version = "0.14.26", features = ["http1", "server", "client"], optional = true }
pin-project = { version = "1.0.8", optional = true }
base64 = { version = "0.21.0", optional = true }
sha1 = { version = "0.10.5", optional = true }
utf-8 = "0.7.5"
rand = "0.8.4"

[features]
default = ["simd"]
simd = ["simdutf8/aarch64_neon"]
upgrade = ["hyper", "pin-project", "base64", "sha1"]

[dev-dependencies]
tokio = { version = "1.25.0", features = ["full", "macros"] }
tokio-rustls = "0.24.0"
rustls-pemfile = "1.0"
hyper = { version = "0.14.26", features = ["http1", "server", "client", "tcp"] }
assert2 = "0.3.4"
trybuild = "1.0.80"
criterion = "0.4.0"

[[bench]]
name = "unmask"
harness = false

[profile.release-debug-info]
inherits = "release"
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[package.metadata.docs.rs]
features = ["upgrade"]
