[package]
name = "sockdeez-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.27"

[dependencies.sockdeez]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "parse_frame"
path = "fuzz_targets/parse_frame.rs"
test = false
doc = false

[[bin]]
name = "parse_frame_fragment"
path = "fuzz_targets/parse_frame_fragment.rs"
test = false
doc = false

[[bin]]
name = "unmask"
path = "fuzz_targets/unmask.rs"
test = false
doc = false
